--- a/veggiz/index.html
+++ b/veggiz/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+    <!--Connexion-->
+
+
+    <!--Menu navigation-->
+      <nav class="main_nav">
+        <ul class="nav_block">
+          <li class="nav_item"><a href="#">Accueil</a></li>
+          <li class="nav_item"><a href="#">Fruits du mois</a></li>
+          <li class="nav_item"><a href="#">Planning des fruits</a></li>
+          <li class="nav_item"><a href="#">Forum</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!--Titre-->
+    <div class="Titre">
+      <h1>VEGGIZ</h1>
+      <h2>Le blog des fruits et des légumes de saison</h2>
+    </div>
+
+    <!--Menu tri des infos-->
+    <div class="tri">
+      <ul class="block_tri">
+        <li class="tri_item"><a href="#">Fruits & Légumes</a></li>
+        <li class="tri_item"><a href="#">Mois & Saisons</a></li>
+        <li class="tri_item"><a href="#"></a>Propriétés</li>        
+      </ul>
+
+    </div>
 
   </body>
 </html>
